--- a/proiectFLP.cabal
+++ b/proiectFLP.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.31.2.
+-- This file has been generated from package.yaml by hpack version 0.35.1.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a69a77ae8e11205f38ab3670f756dc12d04297a27d49eb32964e38d5119927ff
+-- hash: d485e022923cd90c45fb64aaeb000277b706c1a8b459554f87ad19e1197d7164
 
 name:           proiectFLP
 version:        0.1.0.0
@@ -27,7 +27,21 @@ source-repository head
 
 library
   exposed-modules:
+      BoolClass
+      EitherClass
+      Eval
+      Exp
+      Lab2
       Lib
+      ListClass
+      MaybeClass
+      MyPrelude
+      NatClass
+      PairClass
+      Parsing
+      Printing
+      REPLCommand
+      Sugar
   other-modules:
       Paths_proiectFLP
   hs-source-dirs:
